JSP, CDI, JPA, JSTL e Servlet aplicado em Revista

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
         <a href="clientejstl">Cadastro de Cliente</a><br/><br/>
         <a href="funcionariocdi">Cadastro de Funcionário</a><br/><br/>
         <a href="livrojstl">Cadastro de Livro</a><br/><br/>
+        <a href="revistacdi">Cadastro de Revista</a><br/><br/>
 
     </body>
 </html>
